add zebra striping to datatables

--- a/vumc_datatables.libraries.yml
+++ b/vumc_datatables.libraries.yml
@@ -3,6 +3,7 @@ dataTable.admin:
   css:
     theme:
       css/datatables.css: {}
+      css/stripe.css: {}
   js:
     js/datatables.min.js: {}
     js/custom.js: {}
